--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
             android:text="Upload Image Proto"/>
 
         <Button
+            android:id="@+id/btn_face_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Face List Activity"/>
+
+        <Button
             android:id="@+id/btn_s3_sample"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
