--- a/app/src/main/res/layout/activity_face_list.xml
+++ b/app/src/main/res/layout/activity_face_list.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
+              android:padding="8dp"
               tools:context=".FaceListActivity">
 
     <RelativeLayout
@@ -13,25 +14,34 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:src="@drawable/empty_face"/>
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_marginTop="64dp"
-            android:layout_marginLeft="164dp"
-            android:layout_width="80dp"
-            android:layout_height="80dp"/>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingBottom="40dp"
+            >
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/female_face"
+                />
+        </FrameLayout>
+
     </RelativeLayout>
 
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:columnWidth="100dp"
         android:gravity="center"
         android:horizontalSpacing="8dp"
         android:minHeight="100dp"
         android:numColumns="auto_fit"
+        android:padding="12dp"
         android:stretchMode="columnWidth"
         android:verticalSpacing="8dp"/>
 
