--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -21,5 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         />
+
+        <snatcher.face.com.facesnatcher.CameraOverrideEffectView
+            android:id="@+id/camera_override_effect_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
     </FrameLayout>
 </RelativeLayout>
