--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -28,4 +28,12 @@
             android:layout_height="match_parent"
             />
     </FrameLayout>
+    <Button
+        android:id="@+id/nextPageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/next_button_text"
+        />
 </RelativeLayout>
